float css example

--- a/01-Week/03-Day/09-FloatLayout-Activity/Unsolved/floats.html
+++ b/01-Week/03-Day/09-FloatLayout-Activity/Unsolved/floats.html
@@ -10,30 +10,32 @@
 
 <body>
 
-  <header>
+  <header class="nav " >
     &lt;header&gt; #ccc
   </header>
 
-  <section id="left">
+  <section id="left" >
     &lt;section&gt; #666
   </section>
 
-  <section id="middle">
-    &lt;section&gt; #888
+  <section id="middle" >
+     &lt;section&gt; #888
   </section>
 
-  <section id="right">
+  <section id="right" >
     &lt;section&gt; #666
   </section>
 
-  <section id="full">
+  <section id="full" class="clearfix">
     <aside>
       &lt;aside&gt; #fff
     </aside>
     &lt;section&gt; #eee
-    <div id="division">
+
+    <div id="division" class="clearfix">
       &lt;div&gt; #6ea3da
     </div>
+
   </section>
 
   <footer>
